Simple appending case

--- a/src/LessSrupidPath.Unit.Tests/LessStupidPath.Unit.Tests.csproj
+++ b/src/LessSrupidPath.Unit.Tests/LessStupidPath.Unit.Tests.csproj
@@ -36,13 +36,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppendingPathsTests.cs" />
+    <Compile Include="Conversion.cs" />
     <Compile Include="NormalisationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
