--- a/src/LessSrupidPath.Unit.Tests/LessStupidPath.Unit.Tests.csproj
+++ b/src/LessSrupidPath.Unit.Tests/LessStupidPath.Unit.Tests.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="AppendingPathsTests.cs" />
     <Compile Include="Conversion.cs" />
+    <Compile Include="NavigatingTests.cs" />
     <Compile Include="NormalisationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
