--- a/src/LessSrupidPath.Unit.Tests/LessStupidPath.Unit.Tests.csproj
+++ b/src/LessSrupidPath.Unit.Tests/LessStupidPath.Unit.Tests.csproj
@@ -44,6 +44,7 @@
     <Compile Include="NormalisationTests.cs" />
     <Compile Include="PlatformOutputTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnrootingTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
