Include .pdb in the .nupkg, as it was when generating it with GUI

--- a/src/LessStupidPath/LessStupidPath.nuspec
+++ b/src/LessStupidPath/LessStupidPath.nuspec
@@ -13,4 +13,7 @@
     <copyright>Copyright 2013</copyright>
     <tags>file path system io</tags>
   </metadata>
+  <files>
+    <file src="bin\Release\*.pdb" target="lib\net40"/>
+  </files>
 </package>
